@@ -1,0 +1,4 @@
+#!/bin/sh
+
+echo    "Rebooting... "
+reboot  -d -f -i
