@@ -1,4 +1,5 @@
 2002-09-16  Eric Sandall <eric@sandall.us>
+		Added Nealbirch's init.d scripts, but just so they're here, ready to be used.  Nothing is done with them as of yet.  :)
 		Removed functions.bz2 (I thought I did this already...)
 		Modified BUILD to check for each symlink, at WaRL0CK's, Oadae's, and toomanymirrors' suggestion.  Fixes the mounting problems everyone has been having, though I still don't know where the problem came from.  Oadae suggested it happened from the transition for e2fsprogs->init.d and the changes which kept happening, and this might be correct.  Anyways, symlinks will now be (re)created if they don't exist.
 
